--- a/views/front/product.html
+++ b/views/front/product.html
@@ -106,7 +106,7 @@
                                             <div class="section-title">
                                               <h4 style="font-size18px; color:#C59D5F;">* 공지사항 *</h4>
                                               <br />
-                                              <span style="font-size:16px">현재 소핑몰 시스템 사정으로 인하여 온라인 결제가 어려우니 전화로 문의해 주시기 바랍니다.
+                                              <span style="font-size:16px">현재 쇼핑몰 시스템 사정으로 인하여 온라인 결제가 어려우니 전화로 문의해 주시기 바랍니다.
                                                 <br /> <strong style="font-weight:400">전화문의. 1670-8797</strong>
                                               </span>
                                             </div>
